# PrivacyPreservingSmartContractEnergyTrading

./: .gitignore  LICENSE  README.md
.devcontainer/: devcontainer.json
contract-java-test/: pom.xml
contract-java-test/src/test/java/examples/: ComplexityTool.java  DoubleAuctionTest.java  OptimizedZkDoubleAuctionTest.java
rust/: Cargo.toml
rust/double-auction/: Cargo.toml
rust/double-auction/src/: contract.rs
rust/optimized-zk-double-auction/: Cargo.toml
rust/optimized-zk-double-auction/src/: contract.rs  zk_compute.rs
rust/zk-double-auction/: Cargo.toml
scripts/: testnet-double-auction.py  testnet-optimized-zk-double-auction.py  testnet-zk-double-auction.py
