[package]
name = "optimized-zk-double-auction"
version.workspace = true
edition.workspace = true

[lib]
path = "src/contract.rs"
crate-type = ['rlib', 'cdylib']

[package.metadata.zk]
zk-compute-path = "src/zk_compute.rs"

[dependencies]
pbc_contract_common = { workspace = true }
pbc_contract_codegen = { workspace = true }
pbc_traits = { workspace = true }
pbc_lib = { workspace = true }
read_write_rpc_derive = { workspace = true }
read_write_state_derive = { workspace = true }
create_type_spec_derive = { workspace = true }
pbc_zk = { workspace = true }

[features]
abi = ["pbc_contract_common/abi", "pbc_contract_codegen/abi", "create_type_spec_derive/abi", "pbc_lib/abi"]
